# functional-thinking

./: thinking_functional.cabal
src/: Composition1.hs  Composition2.hs  Introduction.hs  Inverse.hs  Main.hs  Recursion2.hs
