name:                ThinkingFunctional
version:             0.1.0.0
author:              Sebastián Estrella
maintainer:          sestrella@stackbuilders.com
build-type:          Simple
cabal-version:       >=1.10

executable thinking_functional
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7
  hs-source-dirs:      src
  default-language:    Haskell2010
